--- a/Ltb_Drugscape.css
+++ b/Ltb_Drugscape.css
@@ -66,7 +66,7 @@ body {
 .modal p {
     color: #666;
     line-height: 1.5;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .close-button {
